Working state response

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 	"scripts": {
 		"lint": "eslint source/**/*.*",
 		"test:develop": "node --watch --test-concurrency 1 --test ./test/tests/**/test.spec.js",
-		"test": "node --test-concurrency 1 --test ./test/tests/**/**/test.spec.js",
+		"test": "node --test-concurrency 1 --test ./test/tests/**/test.spec.js",
 		"build": "esbuild --bundle source/index.js --format=esm --outfile=build/index.js --external:react --jsx=automatic --minify --analyze",
 		"build-express": "esbuild source/servers/express/index.js --bundle --format=esm --platform=node --outfile=build/express.js --external:express --external:react",
 		"develop": "esbuild --bundle source/index.js --format=esm --outfile=build/index.js --external:react --jsx=automatic --sourcemap --analyze --watch",
@@ -34,8 +34,5 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"vite": "^5.0.10"
-	},
-	"dependencies": {
-		"http-errors": "github:subhero24/http-errors"
 	}
 }
