--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"./express": "./build/express.js"
 	},
 	"scripts": {
-		"lint": "eslint source/**/*.*",
+		"lint": "eslint source/**/*.* --max-warnings 0",
 		"test": "node --test --test-concurrency 1 ./test/tests/index.test.js",
 		"test:develop": "node --watch --test --test-concurrency 1 ./test/tests/index.test.js",
 		"build": "npm run build-main && npm run build-express",
@@ -31,9 +31,9 @@
 	"license": "ISC",
 	"devDependencies": {
 		"esbuild": "^0.19.10",
-		"eslint": "^8.56.0",
-		"eslint-plugin-react": "^7.33.2",
-		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint": "^9.15.0",
+		"eslint-plugin-react": "^7.37.2",
+		"eslint-plugin-react-hooks": "^5.0.0",
 		"express": "^4.18.3",
 		"prettier": "^3.1.1",
 		"puppeteer": "^23.8.0",
